--- a/style.css
+++ b/style.css
@@ -11,23 +11,19 @@ body {
 }
 
 .column-one {
-	width: 60%;
 	margin: 50px;
-}
-
-.column-two {
-	width: 40%;
 }
 
 body p {
 	font-size: 16px;
 	font-weight: 400;
 	color: #CE9797;
-	padding: 30px;
+	padding: 15px 30px 30px 30px;
+	line-height: 1.6em;
 }
 
 .logo {
-	padding: 30px;
+	padding: 20px 30px 40px 30px;
 }
 
 .title-text {
@@ -46,19 +42,11 @@ body p {
 	font-weight: 600;
 }
 
-form {
-	display: flex;
-	flex-direction: row;
+input {
 	border-radius: 20px;
     border: 1px solid gray;
-}
-
-input {
-	border: none;
-    height: 30px;
-    width: 200px;
-    padding: 4px;
-    flex-grow: 2;
+    width: 70%;
+    padding: 12px;
     margin-left: 30px;
     background-color: rgba(0, 0, 0, 0);
 }
@@ -72,6 +60,7 @@ input:focus {
     padding: 10px;
     border-radius: 20px;
     width: 75px;
+    margin-left: -50px;
     background-image: linear-gradient(135deg, rgba(206,151,151,0.7) 0%, rgba(249,98,98,0.7) 100%);
 }
 
