--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
+html, body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
 body {
 	font-family: 'Josefin Sans', sans-serif;
 	background: url(images/bg-pattern-desktop.svg);
 	display: flex;
 	justify-content: space-between;
-	margin: 0;
 }
 
 .column {
-	//float: left;
 	height: 100%;
 }
 
@@ -16,9 +22,10 @@ body {
 	padding: 2% 8% 0 8%;
 }
 
-.column-two {
-	max-width: 100%;
+.big-img {
+	max-width: 50vw;
   	margin: auto;
+  	margin-right: 0;
 }
 
 body p {
@@ -27,10 +34,6 @@ body p {
 	color: #CE9797;
 	padding-bottom: 7%;
 	line-height: 1.6em;
-}
-
-.logo {
-	//padding: 20px 30px 40px 30px;
 }
 
 .title-text {
@@ -56,9 +59,8 @@ form {
 input {
 	flex: 1;
 	border-radius: 20px;
-    width: 70%;
+    width: 60%;
     padding: 12px;
-    //margin-left: 30px;
     background-color: rgba(0, 0, 0, 0);
 }
 
@@ -76,6 +78,9 @@ input::placeholder {
 
 .empty-field {
 	border: 1px solid red;
+	background-image: url(images/icon-error.svg);
+  	background-repeat: no-repeat;
+ 	background-position: right 16% center;
 }
 
 .submit-button {
@@ -110,3 +115,39 @@ input::placeholder {
 	display: none;
 }
 
+@media only screen and (max-width: 650px){
+	body {
+		display: flex;
+		flex-direction: column;
+		margin-right: auto;
+		margin-left: auto;
+		overflow-x: hidden;
+		align-items: center;
+	}
+
+	body p, .title-text {
+		text-align: center;
+	}
+
+	.logo {
+		margin: -3% 0 10% 10%;
+	}
+
+	body p, .title-text, form {
+		margin: 5%;
+	} 
+
+	.big-img {
+		display: none;
+	}
+
+	.small-img {
+		display: block;
+	}
+}
+
+@media only screen and (min-width: 650px) and (max-width: 1130px){
+	.empty-field {
+		background-position: right 30% center;
+	}
+}
