--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ input {
 	border-radius: 20px;
     width: 60%;
     padding: 12px;
-    background-color: rgba(0, 0, 0, 0);
 }
 
 input:focus {
@@ -69,7 +68,8 @@ input:focus {
 }
 
 input::placeholder {
-	color: hsla(0, 36%, 70%, 0.589)
+	color: hsla(0, 36%, 70%, 0.589);
+	background-color: transparent !important;
 }
 
 .inactive {
